# fudge

./: Cargo.toml  README.md
.github/workflows/: rust.yml
fudge_lib/: Cargo.toml
fudge_lib/src/: lib.rs
src/: core.rs  main.rs
